# libkeys

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  libkeys.pc.in
debian/: changelog  control  libkeys-dev.install  libkeys0.dirs  libkeys0.install  rules
po/: Makefile.am  pl.po  ru.po  uk.po
src/: Makefile.am  keys_test.c  libkeys.c  libkeys.h
